--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^1.6.0",
+    "ejs": "^3.1.10",
     "express": "^4.18.3",
+    "md5": "^2.3.0",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
   }
